# sia_td3

./: CMakeLists.txt  TD3
data/shaders/: blinn.frag  blinn.vert
report/: index.html
src/: bvh.cpp  bvh.h  camera.cpp  laplacian.cpp  laplacian.h  main.cpp  mesh.cpp  mesh.h  mesh_processing_app.cpp  mesh_processing_app.h  neighborhood.cpp  neighborhood.h  opengl.h  ray.h  viewer.cpp
